Bug 1176918: Only remove coded frames if presentation time is later than previous frame. r=gerald